--- a/src/modules/users/views/forgot_password.hbs
+++ b/src/modules/users/views/forgot_password.hbs
@@ -13,7 +13,7 @@
     <h4>Olá {{name}},</h4>
     <p>Aqui está o link para recuperação da sua senha. Vale lembrar que ele expira em duas horas.</p>
     </br>
-    <a href="">Recupere sua senha</a>
+    <a href={{link}}>Recupere sua senha</a>
     </br>
     <p>Atenciosamente, </p>
     <strong>Equipe GoBarber</strong>
